# tabula-rasa

./: .bumpversion.cfg  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
scripts/: docker_bash.sh  docker_build.sh  poetry_reqs.sh
